# introduction-to-programming

./: CMakeLists.txt  Lessons.c  Lessons.h  generalPractice.c  generalPractice2.c  homeWork.2c.c  homeWork.c
Lecture1/: welcomeToC.c  welcomeToCagain.c
Lecture2/: scanfPractice.c  scanfPractice2.c  scanfPractice3.c  scanfPractice4.c  variables.c
Lecture3/: ifelsePractice.c  ifelsePractice2.c
Lecture4/: switchPractice.c
Lecture6/: whiledoWhileFor.4c.c  whiledoWhileFor.c  whiledoWhileFor2.c  whiledoWhileFor3.c
Lecture7/: Function.c  Function10.c  Function2.c  Function3.c  Function4.c  Function5.c  Function6.c  Function8.c  Function9.c
Lecture8/: array.c  array10.c  array2.c  array3.c  array4.c  array5.c  array6.c  array7.c  array8.c
